--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,4 +21,4 @@ jobs:
           python -m pip install --upgrade pip
           pip install -Ur requirements.txt
       - name: Run tests with coverage
-        run: pytest 
+        run: coverage run -m unittest discover
