--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,4 +21,6 @@ jobs:
           python -m pip install --upgrade pip
           pip install -Ur requirements.txt
       - name: Run tests with coverage
-        run: coverage run -m unittest discover
+        run: |
+          coverage run -m --source . unittest discover
+          coverage report
