Added poetry and docker

--- a/alembic.ini
+++ b/alembic.ini
@@ -35,7 +35,7 @@ script_location = alembic
 # are written from script.py.mako
 # output_encoding = utf-8
 
-sqlalchemy.url = postgresql://postgres:admin123@localhost:5432/runners
+sqlalchemy.url = postgresql://postgres:runners123@192.168.32.3:5432/runners
 
 
 [post_write_hooks]
